--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="dark.css">
     <link rel="stylesheet" href="dark-root-styles.css">
 
-    <title style="font-family: 'Dancing Script', cursive;"> minksbybri | Gaithersburg,MD</title>
+    <title style="font-family: 'Dancing Script', cursive;"> minksbybri | VA </title>
 </head>
 <body>
 
@@ -101,7 +101,7 @@
                         <a class="button-solid" href="about.html" style="font-family: 'Dancing Script', cursive;">
                             About Us
                         </a>
-                        <a class="call-now" href="tel:555-213-9120">
+                        <a class="call-now" href="tel:804-714-4400">
                             <img class="light" decoding="async" src="minksbybri.png" alt="" aria-hidden="true" width="21" height="21">
                             <img class="dark" decoding="async" src="minksbybri.png" alt="" aria-hidden="true" width="21" height="21">
                             <div class="group">
@@ -125,21 +125,21 @@
                 <p style="font-family: 'Dancing Script', cursive;">
                     A very full and thick set, please book this, if you're looking for a dramatic dark lool 
                 </p>
-                <a href="contact.html" class="button-solid"style="font-family: 'Dancing Script', cursive;" >Get in Touch</a>
+                <a href="https://l.instagram.com/?u=https%3A%2F%2Fminksbyybri.as.me%2F&e=AT3VlBfD-5VpX6hMGqKN71UO83DnAS4njr6vZ5ovp9XG5VEQ1IYOhMJnWWEMvHjD_ITCPTE8j5qn9SuPPhFoUCaZqF6uc7sbZSmAsA" class="button-solid"style="font-family: 'Dancing Script', cursive;" >Get in Touch</a>
             </div>
             <div class="service">
                 <h2 style="font-family: 'Dancing Script', cursive;">Standard <span>Volume <span></h2>
                 <p style="font-family: 'Dancing Script', cursive;">
                     If you require something a little more dramatic than the hybrid set, volumes are the way forward. Wider fan bases created and applied to create a darker look. 
                 </p>
-                <a href="contact.html" class="button-solid" style="font-family: 'Dancing Script', cursive;">Get in Touch</a>
+                <a href="https://l.instagram.com/?u=https%3A%2F%2Fminksbyybri.as.me%2F&e=AT3VlBfD-5VpX6hMGqKN71UO83DnAS4njr6vZ5ovp9XG5VEQ1IYOhMJnWWEMvHjD_ITCPTE8j5qn9SuPPhFoUCaZqF6uc7sbZSmAsA" class="button-solid" style="font-family: 'Dancing Script', cursive;">Get in Touch</a>
             </div>
             <div class="service">
                 <h2 style="font-family: 'Dancing Script', cursive;">Hybrids <span></span></h2>
                 <p style="font-family: 'Dancing Script', cursive;">
                     A mix of a volume fan alternated with a classic lash. This creates a light volume yet still natural look. Recommend for first timers and perfect for easy day to day wear.
                 </p>
-                <a href="contact.html" class="button-solid" style="font-family: 'Dancing Script', cursive;">Get in Touch</a>
+                <a href="https://l.instagram.com/?u=https%3A%2F%2Fminksbyybri.as.me%2F&e=AT3VlBfD-5VpX6hMGqKN71UO83DnAS4njr6vZ5ovp9XG5VEQ1IYOhMJnWWEMvHjD_ITCPTE8j5qn9SuPPhFoUCaZqF6uc7sbZSmAsA" class="button-solid" style="font-family: 'Dancing Script', cursive;">Get in Touch</a>
             </div>
         </section>
 
